pkg/controller/testdata/authorization-policy-with-ingress/existing.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    acorn.io/app-name: green-sunset
    acorn.io/app-namespace: acorn
    acorn.io/managed: "true"
  name: foo1
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    acorn.io/app-name: green-sunset
    acorn.io/app-namespace: acorn
    acorn.io/managed: "true"
  name: foo2
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: foo-80
  namespace: foo1
  labels:
    acorn.io/service-name: foo
spec:
  podSelector:
    matchLabels:
      acorn.io/app-name: bitter-smoke
      acorn.io/app-namespace: acorn
      acorn.io/managed: "true"
  port: 80
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: bar-80
  namespace: foo2
  labels:
    acorn.io/service-name: foo
spec:
  podSelector:
    matchLabels:
      acorn.io/app-name: bitter-smoke
      acorn.io/app-namespace: acorn
      acorn.io/managed: "true"
  port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-80
  namespace: foo1
  labels:
    acorn.io/service-name: foo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-80
  namespace: foo2
  labels:
    acorn.io/service-name: foo
